# Financial-Statement-Analysis

./: .env.example  README.md  main.py  pyproject.toml  regenerate_reports.py  requirements.txt
src/balance_sheet/: __init__.py  extractor.py  indicators.py  models.py  page_finder.py  report.py
src/cash_flow/: __init__.py  extractor.py  indicators.py  models.py  page_finder.py  report.py
src/consolidated/: __init__.py  models.py  report.py
src/income_statement/: __init__.py  extractor.py  indicators.py  models.py  page_finder.py  report.py
src/shared/: __init__.py  config.py  formatting.py  llm.py  page_scoring.py
tests/: test_cash_flow_indicators.py  test_cash_flow_page_finder.py  test_consolidated_output_bug.py  test_extractor.py  test_income_statement_indicators.py  test_income_statement_page_finder.py  test_indicators.py  test_page_finder.py  test_report.py  test_web_helpers.py
web/: helpers.py  models.py  server.py
web/static/: index.html
