[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "financial-statement-analyzer"
version = "0.2.0"
description = "Extract financial data from 10-K PDFs using vision models"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "hypothesis>=6.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
